fix: alignment of verified

--- a/src/components/spaces/spaces.module.sass
+++ b/src/components/spaces/spaces.module.sass
@@ -14,6 +14,7 @@
 .ClaimedOfficialSpaceIcon
   @extend .OfficialSpaceIcon
   color: #1D9AF1
+  vertical-align: -0.15em
 
 .ClaimSpacePendingIcon
   padding: $space_mini
